--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 </div>
                 <div id="information">
                     <span class="title">Full Name:</span><span class="contant">郑茹玉</span><br>
-                    <span class="title">Height:</span><span class="contant">168cm</span><br>
-                    <span class="title">Weight:</span><span class="contant">53kg</span><br>
                     <span class="title">School:</span><span class="contant">东北林业大学</span><br>
+                    <span class="title">Location:</span><span class="contant">哈尔滨</span><br>
+                    <span class="title">GitHub:</span><span class="contant">Zheng-Ru-Yu</span><br>
                     <span class="title">Tel:</span><span class="contant">1824896406</span><br>
                     <span class="title">E-mail:</span><span class="contant">18246896406@163.com</span>
                 </div>
@@ -104,7 +104,7 @@
                     <span >应聘职位:</span><span>前端开发工程师</span>
                     <div id="down">
                          <img src="img/star.png"  alt="">
-                        <div id="download"><a href="">DOWNLOAD RESUME</a></div>
+                        <div id="download"><a href="resume.doc" download="">DOWNLOAD RESUME</a></div>
                         <img src="img/star2.png" alt="">
                     </div>
                    
