--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
                     <span class="title">Tel:</span><span class="contant">1824896406</span><br>
                     <span class="title">E-mail:</span><span class="contant">18246896406@163.com</span>
                 </div>
-
-
                 <!-- 姓名：；年龄：20 
                 身高：168 体重：53 
                 就读院校：东北林业大学 
@@ -259,7 +257,7 @@
                             <h5>负责任务:</h5><span>项目负责人,插件封装,前后台开发</span>
                         </div>
                     </div>
-                    <a href="http://www.feelingsmedia.com/">
+                    <a href="javascript:;">
                         <div class="mark-right">
                             <span class="glyphicon glyphicon-search "></span>
                         </div>
@@ -350,7 +348,7 @@
                             <h5>负责任务:</h5><span>两个前端页面</span>
                         </div>
                     </div>
-                    <a href="http://www.feelingsmedia.com/">
+                    <a href="javascript:;">
                         <div class="mark-right">
                             <span class="glyphicon glyphicon-search "></span>
                         </div>
@@ -378,7 +376,7 @@
                             <h5>负责任务:</h5><span>移动端页面</span>
                         </p>
                     </div>
-                    <a href="http://www.feelingsmedia.com/">
+                    <a href="javascript:;">
                         <div class="mark-right">
                             <span class="glyphicon glyphicon-search "></span>
                         </div>
