--- a/index.html
+++ b/index.html
@@ -53,8 +53,6 @@
                 <h1 class="h32">化繁为简</h1>
                 <h1 class="h33">做到极致</h1>
                 <h1 class="h34">作品即自己</h1>
-                <!-- <p>程序猿一只~~</p> -->
-            </li>
         </ul>
         <div class="arrow arrow-left"> <span class="glyphicon glyphicon-chevron-left "></span></div>
         <div class="arrow arrow-right"> <span class="glyphicon glyphicon-chevron-right "></span></div>
@@ -77,7 +75,7 @@
                     <span class="title">School:</span><span class="contant">东北林业大学</span><br>
                     <span class="title">Location:</span><span class="contant">哈尔滨</span><br>
                     <span class="title">GitHub:</span><span class="contant">Zheng-Ru-Yu</span><br>
-                    <span class="title">Tel:</span><span class="contant">1824896406</span><br>
+                    <span class="title">Tel:</span><span class="contant" style="color: #616f5b">1824896406</span><br>
                     <span class="title">E-mail:</span><span class="contant">18246896406@163.com</span>
                 </div>
                 <!-- 姓名：；年龄：20 
